Improve Java Test compilation time
Co-authored-by: Sebastian Sdorra<sebastian.sdorra@cloudogu.com>
Co-authored-by: Thomas Zerr<thomas.zerr@cloudogu.com>
Pushed-by: Thomas Zerr<thomas.zerr@cloudogu.com>
Pushed-by: Sebastian Sdorra<sebastian.sdorra@cloudogu.com>